# ora2ora-rust

./: .gitignore  Cargo.toml  run.sh
src/: main.rs  query.rs  settings.rs
src/core/: mod.rs  oracle.rs
