[package]
name = "lauda"
version = "0.1.0"
authors = ["Ceyhun Kerti <ceyhun.kerti@bluecolor.io>"]

[dependencies]
oracle = { git="https://github.com/kubo/rust-oracle" }
config = "0.9"
serde_derive = "^1.0.8"
serde = "^1.0.8"
log = "0.4"
env_logger = "*"
indicatif = "0.9.0"
console = ">=0.6.2, <1.0.0"